--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/NirobNabil/Webshare#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "expressjs": "^1.0.1",
     "peer": "^0.5.3",
     "peerjs": "^1.3.1"
